// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox inputProps should pass through other props to the input 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    data-automation="first-name-field"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <div
      className="standard"
    >
      <div
        className="checkBox"
      >
        <Icon
          animation=""
          className=""
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="checkMark"
          type="check"
        />
      </div>
      <span
        className="mainLabel"
      >
        <Text
          baseline={false}
          className="standardLabel"
          intimate={false}
          strong={false}
        >
          Still in role
        </Text>
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render full width checkbox 1`] = `
<div
  className="root fullWidth"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <div
      className="standard"
    >
      <div
        className="checkBox"
      >
        <Icon
          animation=""
          className=""
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="checkMark"
          type="check"
        />
      </div>
      <span
        className="mainLabel"
      >
        <Text
          baseline={false}
          className="standardLabel"
          intimate={false}
          strong={false}
        >
          Still in role
        </Text>
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with button style 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="label btn"
    htmlFor="testCheckbox"
  >
    <span
      className="mainLabel"
    >
      Still in role
    </span>
  </label>
</div>
`;

exports[`Checkbox should render with checkbox put at the end of component 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <div
      className="standard rtl"
    >
      <div
        className="checkBox"
      >
        <Icon
          animation=""
          className=""
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="checkMark"
          type="check"
        />
      </div>
      <span
        className="mainLabel"
      >
        <Text
          baseline={false}
          className="standardLabel"
          intimate={false}
          strong={false}
        >
          Still in role
        </Text>
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with className 1`] = `
<div
  className="root testClassname"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <div
      className="standard"
    >
      <div
        className="checkBox"
      >
        <Icon
          animation=""
          className=""
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="checkMark"
          type="check"
        />
      </div>
      <span
        className="mainLabel"
      >
        <Text
          baseline={false}
          className="standardLabel"
          intimate={false}
          strong={false}
        >
          Still in role
        </Text>
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with compact checkbox style 1`] = `
<div
  className="root compact"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <div
      className="standard"
    >
      <div
        className="checkBox"
      >
        <Icon
          animation=""
          className=""
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="checkMark"
          type="check"
        />
      </div>
      <span
        className="mainLabel"
      >
        <Text
          baseline={false}
          className="standardLabel"
          intimate={true}
          strong={false}
        >
          Still in role
        </Text>
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with simple props 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <div
      className="standard"
    >
      <div
        className="checkBox"
      >
        <Icon
          animation=""
          className=""
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="checkMark"
          type="check"
        />
      </div>
      <span
        className="mainLabel"
      >
        <Text
          baseline={false}
          className="standardLabel"
          intimate={false}
          strong={false}
        >
          Still in role
        </Text>
      </span>
    </div>
  </label>
</div>
`;

exports[`Checkbox should render with standard checkbox style 1`] = `
<div
  className="root"
>
  <input
    checked={false}
    className="input"
    disabled={false}
    id="testCheckbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="label"
    htmlFor="testCheckbox"
  >
    <div
      className="standard"
    >
      <div
        className="checkBox"
      >
        <Icon
          animation=""
          className=""
          lineHeight=""
          rotation=""
          size=""
          smoothRotate={false}
          svgClassName="checkMark"
          type="check"
        />
      </div>
      <span
        className="mainLabel"
      >
        <Text
          baseline={false}
          className="standardLabel"
          intimate={false}
          strong={false}
        >
          Still in role
        </Text>
      </span>
    </div>
  </label>
</div>
`;
